[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/WeatherEffects.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3(500, 1, 1)
flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 5.0
gravity = Vector3(0, 980, 0)
initial_velocity = 500.0
initial_velocity_random = 0.2
scale = 2.0
color = Color(0.85098, 0.85098, 0.85098, 0.392157)

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3(500, 1, 1)
flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 15.0
gravity = Vector3(0, 50, 0)
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color(1, 1, 1, 0.784314)

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3(500, 500, 1)
flag_disable_z = true
direction = Vector3(1, 0, 0)
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity = 200.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color = Color(0.9, 0.9, 0.9, 0.3)

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float fog_density = 0.5;
uniform vec4 fog_color : hint_color = vec4(0.8, 0.8, 0.8, 1.0);

void fragment() {
    vec4 screen_color = texture(SCREEN_TEXTURE, SCREEN_UV);
    COLOR = mix(screen_color, fog_color, fog_density);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/fog_density = 0.5
shader_param/fog_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="Animation" id=6]
resource_name = "lightning_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LightningFlash:modulate")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(0, 0.1, 0.2, 0.5),
"transitions": PoolRealArray(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0)]
}

[node name="WeatherEffects" type="CanvasLayer"]
layer = 1
script = ExtResource( 1 )

[node name="RainParticles" type="Particles2D" parent="."]
position = Vector2(480, -10)
amount = 500
lifetime = 1.5
preprocess = 1.0
process_material = SubResource( 1 )

[node name="SnowParticles" type="Particles2D" parent="."]
position = Vector2(480, -10)
amount = 200
lifetime = 5.0
preprocess = 1.0
process_material = SubResource( 2 )

[node name="WindParticles" type="Particles2D" parent="."]
position = Vector2(-10, 270)
amount = 100
lifetime = 3.0
preprocess = 1.0
process_material = SubResource( 3 )

[node name="FogOverlay" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LightningFlash" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(1, 1, 1, 0.498039)

[node name="WeatherOverlay" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lightning_flash = SubResource( 6 )